--- a/SpriteKitWatchFace WatchKit App/Info.plist
+++ b/SpriteKitWatchFace WatchKit App/Info.plist
@@ -19,14 +19,14 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>127</string>
+	<string>129</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.highcaffeinecontent.SpriteKitWatchFace</string>
+	<string>com.wzy0532.SpriteKitWatchFace</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
