--- a/SpriteKitWatchFace WatchKit Extension/Info.plist
+++ b/SpriteKitWatchFace WatchKit Extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>SpriteKitWatchFace WatchKit Extension</string>
+	<string>Hermès Core</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>130</string>
+	<string>136</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
